--- a/loms/Makefile
+++ b/loms/Makefile
@@ -44,4 +44,7 @@ generate:
 	protoc -I api/loms/v1 -I ../vendor-proto \
 	--go_out=pkg/loms/v1 --go_opt=paths=source_relative \
 	--go-grpc_out=pkg/loms/v1 --go-grpc_opt=paths=source_relative \
-	api/loms/v1/service.proto
+	api/loms/v1/service.proto --validate_out lang=go:pkg/loms/v1 \
+
+	mv pkg/loms/v1/route256/loms/pkg/loms_v1/* pkg/loms/v1
+	rm -r  ./pkg/loms/v1/route256
