--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "50051:50051"
       - "8081:8081"
     depends_on:
-      - postgres-checkout
+      - pgbouncer-checkout
     networks:
       - net
   # database for checkout
@@ -40,6 +40,27 @@ services:
           memory: 4G
     networks:
       - net
+  #bouncer for checkout
+  pgbouncer-checkout:
+    image: edoburu/pgbouncer
+    environment:
+      - DB_USER=user
+      - DB_PASSWORD=password
+      - DB_HOST=postgres-checkout
+      - DB_NAME=checkout
+      - POOL_MODE=session
+      - ADMIN_USERS=postgres,user
+      - AUTH_TYPE=plain
+    ports:
+      - "5436:5432"
+    depends_on:
+      - postgres-checkout
+    networks:
+      - net
+  
+  #########################################
+
+  #service loms
   loms:
     image: loms
     build: ./loms/
@@ -47,7 +68,7 @@ services:
       - "50052:50052"
       - "8082:8082"
     depends_on:
-      - postgres-loms
+      - pgbouncer-loms
     networks:
       - net
   # database for loms
@@ -77,7 +98,24 @@ services:
           memory: 4G
     networks:
       - net
-  # notification:
+  #bouncer for loms
+  pgbouncer-loms:
+    image: edoburu/pgbouncer
+    environment:
+      - DB_USER=user
+      - DB_PASSWORD=password
+      - DB_HOST=postgres-loms
+      - DB_NAME=loms
+      - POOL_MODE=session
+      - ADMIN_USERS=postgres,user
+      - AUTH_TYPE=plain
+    ports:
+      - "5435:5432"
+    depends_on:
+      - postgres-loms
+    networks:
+      - net
+        # notification:
   #   image: notification
   #   build: ./notification
   #   ports:
