--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,13 @@ services:
     ports:
       - "50051:50051"
       - "8081:8081"
+    environment:
+      - JAEGER_AGENT_HOST=jaeger
+      - JAEGER_AGENT_PORT=6831
+      - JAEGER_SAMPLER_MANAGER_HOST_PORT=jaeger:5778
     depends_on:
       - pgbouncer-checkout
+      - jaeger
     networks:
       - net
   # database for checkout
@@ -67,8 +72,13 @@ services:
     ports:
       - "50052:50052"
       - "8082:8082"
+    environment:
+      - JAEGER_AGENT_HOST=jaeger
+      - JAEGER_AGENT_PORT=6831
+      - JAEGER_SAMPLER_MANAGER_HOST_PORT=jaeger:5778
     depends_on:
       - pgbouncer-loms
+      - jaeger
     networks:
       - net
   # database for loms
@@ -200,5 +210,52 @@ services:
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
       - KAFKA_BROKER_ID=3
       - ZOOKEEPER=zookeeper:2181
+    networks:
+      - net
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - 9090:9090
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./alerts.yml:/etc/prometheus/alerts.yml
+    networks:
+      - net
+#    extra_hosts:
+#     - host.docker.internal:host-gateway
+  alertmanager:
+    image: prom/alertmanager
+    container_name: alertmanager
+    hostname: alertmanager
+    restart: always
+    ports:
+      - 9095:9093
+    volumes:
+      - ./alertmanager.yml:/etc/alertmanager/alertmanager.yml
+    command:
+      - '--config.file=/etc/alertmanager/alertmanager.yml'
+    networks:
+      - net
+  grafana:
+    image: grafana/grafana-oss
+    ports:
+      - 3001:3000
+    volumes:
+      - ./data:/var/lib/grafana
+    links:
+      - prometheus
+    networks:
+      - net
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    ports:
+      - 14269:14269
+      - 5775:5775/udp
+      - 6831:6831/udp
+      - 6832:6832/udp
+      - 5778:5778
+      - 16686:16686 # web
+      - 14268:14268
+      - 9411:9411
     networks:
       - net
