--- a/alertmanager.yml
+++ b/alertmanager.yml
@@ -9,7 +9,7 @@ route:
 receivers:
   - name: 'telegram_bot'
     telegram_configs:
-      - bot_token: '5808361841:AAHGOkVBuZS6u1p8BAqLP1FDHPn3qY95hLU'
+      - bot_token: '#######'
         api_url: 'https://api.telegram.org'
         chat_id: 392895877
         parse_mode: 'HTML'
